fix: adjust gap between sections

--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,11 @@ body{
     background-color: var(--background);
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+}
 section > .heading {
   text-align: start;
 }
