--- a/styles/services.css
+++ b/styles/services.css
@@ -5,7 +5,7 @@ section.services {
   flex-direction: column;
   gap: 30px;
   padding: 0 80px;
-  margin: 100vh 0;
+  margin-top: 90px;
 }
 
 .services .heading {
